# AgenticMemoryDemo

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent/: __init__.py  graph.py  nodes.py  state.py
agent/memory/: __init__.py  episodic.py  long_term.py  short_term.py
demo/workspace/: notes.txt  tasks.json
mcp_server/: __init__.py  server.py
mcp_server/tools/: __init__.py  calculator.py  file_ops.py  weather.py
